--- a/ColorFlipper/setup/index.html
+++ b/ColorFlipper/setup/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Color Flipper || Simple</title>
 
     <!-- styles -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel='stylesheet' href='styles.css' />
   </head>
   <body>
     <nav>
-      <div class="nav-center">
+      <div class='nav-center'>
         <h4>color flipper</h4>
       </div>
     </nav>
-    <main>
-      <button class="btn-hero" id="btn">Change Color</button>
+    <main class='container'>
+      <h2 id='display'>Background Color: Default</h2>
+      <button class='btn-hero' id='btn'>Change Color</button>
     </main>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script src='app.js'></script>
   </body>
 </html>
