added div to fix spacing

--- a/ColorFlipper/setup/index.html
+++ b/ColorFlipper/setup/index.html
@@ -15,8 +15,10 @@
       </div>
     </nav>
     <main class='container'>
-      <h2 id='display'>Background Color: Default</h2>
-      <button class='btn-hero' id='btn'>Change Color</button>
+      <div>
+        <h2 id='display'>Background Color: Default</h2>
+        <button class='btn-hero' id='btn'>Change Color</button>
+      </div>
     </main>
     <!-- javascript -->
     <script src='app.js'></script>
