--- a/ColorFlipper/setup/index.html
+++ b/ColorFlipper/setup/index.html
@@ -12,10 +12,14 @@
     <nav>
       <div class='nav-center'>
         <h4>color flipper</h4>
+        <ul class="nav-links">
+          <li><a href="index.html">simple</a></li>
+          <li><a href="hex.html">hex</a></li>
+        </ul>
       </div>
     </nav>
-    <main class='container'>
-      <div>
+    <main>
+      <div class='container'>
         <h2 id='display'>Background Color: Default</h2>
         <button class='btn-hero' id='btn'>Change Color</button>
       </div>
