--- a/Counter/index.html
+++ b/Counter/index.html
@@ -13,9 +13,9 @@
       <div class='container'>
         <h1>Counter</h1>
         <p id='value'>0</p>
-        <button class='btn'>Decrease</button>
-        <button class='btn'>Reset</button>
-        <button class='btn'>Increase</button>
+        <button class='btn' id='decrease'>Decrease</button>
+        <button class='btn' id='reset'>Reset</button>
+        <button class='btn' id='increase'>Increase</button>
       </div>
     </main>
     <!-- javascript -->
