--- a/Reviews/index.html
+++ b/Reviews/index.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+      <div>
+        <h2>Our Reviews</h2>
+      </div>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
