--- a/CountdownTimer/index.html
+++ b/CountdownTimer/index.html
@@ -9,7 +9,52 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="gift picture">
+      </article>
+      <article class="gift-info">
+        <h3>old iphone giveaway</h3>
+        <h4 class="giveaway">
+          giveaway ends on Sunday, April 24, 2020 at 8:00am
+        </h4>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, aspernatur. Quo enim placeat possimus eligendi? Ad quaerat quos nam, iste autem, sapiente, eveniet repudiandae voluptas tempore assumenda inventore quidem placeat?</p>
+        <div class="deadline">
+          <!-- days -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="days">34</h4>
+              <span>days</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- hours -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">34</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- mins -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="mins">34</h4>
+              <span>mins</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- secs -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="secs">34</h4>
+              <span>secs</span>
+            </div>
+          </div>
+          <!-- end of item -->
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
